<resources>
    <string name="app_name">Maimai Data</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="dx_score_transform">DX分数转换</string>
    <string name="dx_rating_correlation">Rating相关</string>
    <string name="dx_song_list">曲目列表</string>

    <string name="search">搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search_hint">输入关键字进行搜索</string>
    <string name="level_ds_select">定数筛选</string>
    <string name="search_level_ds">LEVEL %.1f</string>
    <string name="search_level_string">LEVEL %s</string>
    <string name="song_title">歌曲名</string>
    <string name="level">等级</string>
    <string name="fit_diff">拟合定数</string>
    <string name="sequencing">难度排序</string>
    <string name="version">版本</string>
    <string name="sort">分类</string>
    <string name="favor">收藏的歌曲</string>
    <string name="search_reset">重置选项</string>


    <!--    sort-->
    <string name="pop">流行&amp;动漫</string>
    <string name="niconico">niconico &amp; VOCALOID</string>
    <string name="touhou">东方Project</string>
    <string name="game_variety">其他游戏</string>
    <string name="sort_maimai">舞萌</string>
    <string name="ongeki_chuni">音击&amp;中二节奏</string>
    <string name="utage">宴会場</string>

    <!--    version-->
    <string name="maimai">maimai</string>
    <string name="green">GreeN</string>
    <string name="orange">ORANGE</string>
    <string name="pink">PiNK</string>
    <string name="murasaki">MURASAKi</string>
    <string name="milk">MiLK</string>
    <string name="finale">FiNALE</string>
    <string name="dx">舞萌DX</string>
    <string name="dx2021">舞萌DX 2021</string>
    <string name="dx2022">舞萌DX 2022</string>
    <string name="dx2023">舞萌DX 2023</string>
    <string name="dx2024">舞萌DX 2024</string>
    <string name="dx2025">舞萌DX 2025</string>

    <string name="song_alias">歌曲别名</string>
    <string name="artist">ARTIST</string>
    <string name="bpm">BPM</string>
    <string name="genre">歌曲分类</string>
    <string name="add_version">添加版本</string>
    <string name="play_title_1">播放曲名1</string>
    <string name="play_title_2">播放曲名2</string>


    <string name="maimai_achievement_format">%.2f%%</string>
    <string name="maimaidx_scope_achievement_desc">%.4f%%-—%.4f%%</string>
    <string name="maimaidx_achievement_desc">%.4f%%</string>
    <string name="design">谱面作者</string>
    <string name="status">达成状态</string>
    <string name="no_record">暂无成绩</string>
    <string name="no_record_tips">尚未游玩过当前难度的谱面，或者你需要登陆本应用中的查分器来更新你的分数信息</string>
    <string name="inner_level_up">%.1f↑</string>
    <string name="inner_level_down">%.1f↓</string>
    <string name="inner_level_old">(%.1f)</string>
    <string name="download_cover_error">下载图片失败</string>
    <string name="share_cover">分享图片</string>


    <string name="total">TOTAL</string>
    <string name="tap">TAP</string>
    <string name="hold">HOLD</string>
    <string name="slide">SLIDE</string>
    <string name="_break">BREAK</string>
    <string name="touch">TOUCH</string>
    <string name="break_score">break score(在绝赞全黄时填写)</string>
    <string name="dx_achievement">DX Achievement</string>

    <string name="finale_full_achievement">FiNALE理论值</string>
    <string name="copy_song_name_success">复制歌曲名成功</string>


    <string name="perfect">PERFECT</string>
    <string name="great">GREAT</string>
    <string name="good">GOOD</string>
    <string name="miss">MISS</string>
    <string name="down50">50落</string>
    <string name="down100">100落</string>


    <string name="rating_sheet">RANK 系数表</string>
    <string name="maimaidx_prober">舞萌DX查分器</string>
    <string name="login">登录</string>
    <string name="no_logged_in">未登录</string>
    <string name="current_user">当前用户</string>
    <string name="prober_tips">数据来源于舞萌DX查分器，\n请使用舞萌DX查分器进行数据同步</string>
    <string name="prober_url">https://github.com/Diving-Fish/maimaidx-prober</string>
    <string name="prober_update_help">传分帮助</string>
    <string name="prober_update_content_step1">①.打开“开启代理”，App会自动打开代理（第一次使用请同意VPN创建请求）、复制链接、跳转微信</string>
    <string name="prober_update_content_step2">②.在微信中将复制的链接发送至聊天窗口（如文件传输助手）</string>
    <string name="prober_update_content_step3">③.点击发送的链接，等待网页提示“登录信息以获取”后，即可关闭页面返回App</string>
    <string name="prober_update_content_step4">④.App开始获取分数信息，并根据设置中的难度选择将对应难度的成绩上传至水鱼网</string>
    <string name="change_account">更换账户</string>
    <string name="query_record">查分</string>
    <string name="rank">RANK</string>
    <string name="achievement">达成率</string>
    <string name="coefficient">系数</string>
    <string name="rate">倍率(达成率*系数)</string>

    <string name="song_level">歌曲定数</string>
    <string name="target_rating">目标rating</string>
    <string name="single_rating">单曲rating</string>
    <string name="total_rating">合计rating</string>
    <string name="calculate">计算</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="old_version_35">历史版本：%d</string>
    <string name="new_version_15">现行版本：%d</string>
    <string name="old_version_divider">best 35 分界线</string>
    <string name="new_version_divider">best 15 分界线</string>
    <string name="rating_scope">%d/%d</string>
    <string name="save_best">保存图片</string>
    <string name="image_generation_error">图片生成失败</string>
    <string name="storage_permission_denied">保存失败，没有获取储存权限</string>
    <string name="file_saved_to_path">文件已保存至%1$s目录</string>
    <string name="version_query">版本进度</string>
    <string name="level_query">等级进度</string>
    <string name="switch_display">切换显示</string>
    <string name="name_plate_achieved">%d/%d</string>
    <string name="mismatching_data_title">当前数据库不匹配查分数据</string>
    <string name="mismatching_data_content">当前数据库未包含新曲数据，显示的数据可能不准确，请等待数据库更新后再进行查分</string>

    <string name="maimai_data_update_title">新版本：%s</string>
    <string name="maimai_data_update_default_content">BUG修复</string>
    <string name="maimai_data_update_download">下载</string>
    <string name="maimai_data_data_update_title">数据更新</string>
    <string name="maimai_data_data_update_info">本地数据版本:%s，检测到数据版本:%s，需要现在更新吗？</string>
    <string name="maimai_data_download_title">正在下载</string>
    <string name="maimai_data_start_download">开始下载</string>
    <string name="maimai_data_download_error">下载出错，请重新下载</string>
    <string name="select_account_hint">请选择账号</string>
    <string name="type_in_account_pwd_hint">请输入用户名或密码</string>

    <string name="start_proxy">开启代理</string>
    <string name="stop_proxy">关闭代理</string>

    <string name="about">关于</string>
    <string name="local_data_version">本地数据版本</string>
    <string name="fit_diff_update_date">拟合定数更新日期</string>
    <string name="project_url">项目地址</string>
    <string name="feedback">建议和反馈</string>

    <string name="settings">设置</string>
    <string name="settings_enable_show_alias">启用别名显示</string>
    <string name="settings_enable_alias_search">启用别名搜索</string>
    <string name="settings_enable_charter_search">启用谱师搜索</string>

    <string name="song_id">歌曲ID</string>
    <string name="settings_nickname">全局用户昵称</string>
    <string name="settings_nickname_dialog_title">请输入昵称（Best导出时强制显示该昵称）</string>
    <string name="settings_use_diving_fish_nickname">使用水鱼账号昵称</string>
    <string name="settings_update_difficulty">选择上传查分器难度</string>
    <string name="settings_difficulty_pick">选择难度</string>

    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="vpn_please_login">请先登录查分器账户</string>
    <string name="left_arrow">◀</string>
    <string name="right_arrow">▶</string>
    <string name="accountManagement">账号管理</string>
    <string name="selectAccount">选择账号</string>

</resources>