<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="enable_show_alias"
        app:title="@string/settings_enable_show_alias" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="enable_alias_search"
        app:title="@string/settings_enable_alias_search" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="enable_charter_search"
        app:title="@string/settings_enable_charter_search" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="enable_diving_fish_nickname"
        app:title="@string/settings_use_diving_fish_nickname" />

    <EditTextPreference
        app:key="nickname"
        app:title="@string/settings_nickname"
        app:dialogTitle="@string/settings_nickname_dialog_title"
        app:defaultValue=""
        app:iconSpaceReserved="false" />

    <MultiSelectListPreference
        app:iconSpaceReserved="false"
        app:key="select_difficulties"
        app:title="@string/settings_update_difficulty"
        app:dialogTitle="@string/settings_difficulty_pick"
        app:entries="@array/difficulty_options"
        app:entryValues="@array/difficulty_values"
        app:defaultValue="@array/difficulty_default" />

    <Preference
        app:fragment="com.paperpig.maimaidata.ui.about.AboutFragment"
        app:iconSpaceReserved="false"
        app:key="jump_to_about"
        app:title="@string/about" />

</PreferenceScreen>