<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:elevation="1dp"
    android:orientation="vertical"
    android:visibility="invisible"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <include
                layout="@layout/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/level" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/levelSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/dxp_song_level" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/sequencing" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sortSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/difficulty_rank" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/sort" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/popCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/nicoCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/niconico" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/touhouCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touhou" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/gameVarietyCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_variety" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/maimaiSortCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maimai" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ongekiChuniCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ongeki_chuni" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/version" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/maimaiCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maimai" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/greenCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/orangeCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/pinkCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pink" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/murasakiCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/murasaki" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/milkCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/finaleCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finale" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/dxCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dx" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/dx2021Check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dx2021" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/closeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000"
        android:orientation="horizontal" />
</LinearLayout>